# vlc

./: .editorconfig  Makefile.am  configure.ac
compat/: tfind.c  twalk.c
contrib/: bootstrap
contrib/src/: main.mak
contrib/src/aom/: rules.mak
contrib/src/dav1d/: rules.mak
contrib/src/libdsm/: fix-build-android.patch  rules.mak
contrib/src/libplacebo/: SHA512SUMS
contrib/src/microdns/: fix-build-android.patch  rules.mak
contrib/src/vpx/: rules.mak
extras/include/x86/: x86inc.asm  x86util.asm
extras/package/win32/: build-external.sh
include/: vlc_actions.h  vlc_cpu.h  vlc_fixups.h  vlc_fourcc.h  vlc_interface.h  vlc_intf_strings.h  vlc_player.h  vlc_playlist_new.h  vlc_video_splitter.h  vlc_vout.h  vlc_vout_osd.h  vlc_vout_window.h
modules/: MODULES_LIST  Makefile.am
modules/access/: bluray.c  file.c
modules/access/dtv/: access.c
modules/audio_output/: audiotrack.c
modules/codec/: Makefile.am  edummy.c  videotoolbox.m  vt_utils.c  x264.c
modules/codec/avcodec/: va.c  va.h  vaapi.c  video.c
modules/control/: Makefile.am  gestures.c  hotkeys.c  motion.c  oldrc.c
modules/control/dbus/: dbus.c  dbus_common.h  dbus_player.c  dbus_root.c  dbus_tracklist.c
modules/demux/: Makefile.am  mock.c
modules/demux/mp4/: mp4.c
modules/gui/: ncurses.c
modules/gui/qt/components/: extended_panels.cpp
modules/gui/qt/components/playlist/: playlist_model.cpp  standardpanel.cpp  vlc_model.hpp
modules/gui/qt/ui/: video_effects.ui
modules/hw/va/: Makefile.am  adjust.c  chroma.c  deinterlace.c  denoise_sharpen.c  instance.c  va_filter.h  vlc_va.c  vlc_va.h  xcb_display.c
modules/hw/vaapi/: Makefile.am  adjust.c  chroma.c  deinterlace.c  denoise_sharpen.c  instance.c  va_filter.h  vlc_vaapi.c  vlc_vaapi.h
modules/keystore/: file_crypt_android.c
modules/misc/: audioscrobbler.c
modules/mux/: Makefile.am
modules/packetizer/: Makefile.am  h264.c  hevc.c  hxxx_nal.h  mpeg4video.c  mpegvideo.c  startcode.asm  startcode_helper.h  vc1.c
modules/services_discovery/: avahi.c
modules/stream_out/: Makefile.am
modules/stream_out/transcode/: video.c
modules/video_chroma/: Makefile.am  chain.c  copy.c  copy.h  cvpx_cvpx.c  cvpx_i420.c  i420_10_i420.c  i420_i420_10.c
modules/video_filter/: Makefile.am  bg_mixture_models.c  ci_filters.m  motionblur.c  ravu.c
modules/video_filter/deinterlace/: algo_basic.asm  algo_basic.c  algo_basic.h  algo_basic_x86.asm  algo_ivtc.c  algo_ivtc.h  algo_phosphor.c  algo_phosphor.h  algo_x.c  algo_x.h  algo_x_x86.asm  algo_yadif.c  algo_yadif.h  common.c  deinterlace.c  deinterlace.h  helpers.c  merge.c  merge.h
modules/video_output/: Makefile.am  caopengllayer.m  drm_gbm.c  macosx.m
modules/video_output/opengl/: converter_android.c  converter_cvpx.c  converter_va.c  converter_vaapi.c  converter_vdpau.c  display.c  drm.h  drm_events.h  drm_input.c  egl.c  internal.h  vout_helper.c  vout_helper.h
modules/video_output/vulkan/: display.c
modules/video_output/wayland/: shm.c
modules/video_output/win32/: common.c  common.h  direct3d11.c  direct3d9.c  events.c  glwin32.c
modules/video_output/xcb/: x11.c  xkb.c  xvideo.c
modules/video_splitter/: panoramix.c  wall.c
src/: libvlc-module.c  libvlc.c  libvlc.h  libvlccore.sym
src/audio_output/: output.c
src/input/: clock.c  decoder.c  input.c  player.c
src/interface/: interface.c
src/linux/: cpu.c
src/misc/: cpu.c  filter.c  filter_chain.c  fourcc.c  objects.c  picture.c
src/playlist/: control.c  engine.c  item.c  thread.c
src/playlist_new/: control.c  player.h
src/video_output/: display.c  interlacing.c  snapshot.c  snapshot.h  video_output.c  video_text.c  video_widgets.c  vout_internal.h  vout_intf.c  vout_wrapper.c
test/: Makefile.am  bench_asm.c
test/bench_asm/: bench_asm.h  deint_wrapper.c  deinterlacing.c  main.c  packetizer_startcode.c  startcode_annexb.c
test/modules/packetizer/: helpers.c  startcode.asm
test/modules/video_filter/: deinterlace.c
test/src/input/: player.c
